--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <p>Please fill out this form with required information</p>
         <form method="post" action="https://register-demo.freecodecamp.org">
             <fieldset>
-                <label for="first-name">Enter Your First Name: <input id="first-name" required type="text"/></label>
-                <label for="last-name">Enter Your Last Name: <input id="last-name" required type="text"/></label>
-                <label for="email">Enter Your Email: <input id="email" required type="email"/></label>
-                <label for="password">Create a New Password: <input id="password" required type="password" pattern="[a-z0-5]{8,}"/></label>
+                <label for="first-name">Enter Your First Name: <input name="first-name" id="first-name" required type="text"/></label>
+                <label for="last-name">Enter Your Last Name: <input name="last-name" id="last-name" required type="text"/></label>
+                <label for="email">Enter Your Email: <input name="email" id="email" required type="email"/></label>
+                <label for="password">Create a New Password: <input name="password" id="password" required type="password" pattern="[a-z0-5]{8,}"/></label>
             </fieldset>
             <fieldset>
                 <legend>Account type (required)</legend>
@@ -21,10 +21,10 @@
                 <label for="bussines account"><input name="account-type" id="bussines account" type="radio" /> Bussines Account</label>
             </fieldset>
             <fieldset>
-                <label for="profile-picture">Upload a profile picture: <input id="profile-picture" type="file" /></label>
-                <label>Input your age (years): <input type="number" min="13" max="120" /> </label>
-                <label for="hear-about">How did you hear about us?
-                <select id="hear-about">
+                <label for="profile-picture">Upload a profile picture: <input name="profile-pic" id="profile-picture" type="file" /></label>
+                <label for="age">Input your age (years): <input name="age" id="age" type="number" min="13" max="120" /> </label>
+                <label for="refferer">How did you hear about us?
+                <select name="refferer" id="refferer">
                     <option value="">(select one)</option>
                     <option value="1">freeCodeCamp News</option>
                     <option value="2">freeCodeCamp YouTube Channel</option>
@@ -32,8 +32,12 @@
                     <option value="4">Other</option>
                 </select>
                 </label>
+                <label for="bio">
+                    Provide a bio: 
+                    <textarea name="bio" id="bio" cols="30" rows="3" placeholder="I love coding on the beach..."></textarea>
+                </label>
             </fieldset>
-            <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+            <label for="terms-and-conditions"><input name="terms-and-conditions" id="terms-and-conditions" type="checkbox"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
         </form>
     </body>
 </html>
