--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </fieldset>
             <fieldset>
                 <legend>Account type (required)</legend>
-                <label for="personal-account"><input name="account-type" id="personal-account" type="radio" checked /> Personal Account</label>
-                <label for="bussines account"><input name="account-type" id="bussines account" type="radio" /> Bussines Account</label>
+                <label for="personal-account"><input class="inline" name="account-type" id="personal-account" type="radio" checked /> Personal</label>
+                <label for="bussines account"><input class="inline" name="account-type" id="bussines account" type="radio" /> Bussines</label>
             </fieldset>
             <fieldset>
                 <label for="profile-picture">Upload a profile picture: <input name="profile-pic" id="profile-picture" type="file" /></label>
@@ -37,7 +37,8 @@
                     <textarea name="bio" id="bio" cols="30" rows="3" placeholder="I love coding on the beach..."></textarea>
                 </label>
             </fieldset>
-            <label for="terms-and-conditions"><input name="terms-and-conditions" id="terms-and-conditions" type="checkbox"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+            <label for="terms-and-conditions"><input class="inline" name="terms-and-conditions" id="terms-and-conditions" type="checkbox"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+            <input type="submit" value="Submit" />
         </form>
     </body>
 </html>
